# AdvancedContainers

./: CMakeLists.txt  README.md  main.cpp  plot.py  temp
Gistogram/src/main/kotlin/: Application.kt  Main.kt
Gistogram/src/main/kotlin/controller/: LogisticController.kt
Gistogram/src/main/kotlin/data/: City.kt  Graph.kt
Gistogram/src/main/kotlin/data/example/: gistogram.json  logisticRequest.json
Gistogram/src/main/kotlin/data/mock/: logistics_result.txt
Gistogram/src/main/kotlin/gistogram/: GistogramPersonFilters.kt
Gistogram/src/main/kotlin/nativelib/: NativeLib.kt
Gistogram/src/main/kotlin/repository/: CityJpaRepository.kt
api/Gistogram/: Dockerfile  build.gradle.kts  docker-compose.yaml  settings.gradle.kts
api/Gistogram/src/main/kotlin/controller/: LogisticController.kt
api/Gistogram/src/main/kotlin/data/: Person.kt  Road.kt
api/Gistogram/src/main/kotlin/gistogram/: GistogramOption.kt
api/Gistogram/src/main/kotlin/nativelib/: NativeLib.kt
api/Gistogram/src/main/kotlin/repository/: LogisticRepository.kt  RoadJpaRepository.kt
api/Gistogram/src/main/kotlin/service/: LogisticService.kt
api/Gistogram/src/main/resources/: application.yml
collection/: Iterable.h
collection/linkedlist/: Element.h  LinkedList.h
collection/segmentedlist/: SegmentedList.h
collection/sequence/: MutableSequence.h  Sequence.h
collection/sequence/arraysequence/: ArraySequence.h  MutableArraySequence.h
collection/sequence/linkedlistsequence/: ListSequence.h  MutableListSequence.h
collectionunqptr/: Iterable.h
collectionunqptr/dinamicarray/: DynamicArray.h  DynamicArrayAdapter.h  DynamicArrayUP.h
collectionunqptr/dynamicarray/: DynamicArray.h
collectionunqptr/linkedlist/: ElementUP.h  LinkedListUP.h
collectionunqptr/segmentedlist/: SegmentedList.h
collectionunqptr/sequence/: MutableSequence.h
collectionunqptr/sequence/arraysequence/: ArraySequence.h  MutableArraySequence.h  MutableArraySequenceUnqPtr.h
collectionunqptr/sequence/linkedlistsequence/: ListSequence.h  MutableListSequenceUnqPtr.h
data/: .Person.h.swp  Person.h
gistogram-ui/Gistogram/: build.gradle  settings.gradle
gistogram-ui/Gistogram/gradle/wrapper/: gradle-wrapper.properties
gistogram-ui/Gistogram/src/main/java/nativelib/: NativeGistogram.java
gistogram/dsl/: GistogramScope.h
gistogram/model/: Gistogram.h  Parameter.h
gistogram/model/dictionary/: Dictionary.h  HashMap.h  Pair.h
gistogram/model/dictionary/utils/: HashUtil.h
grafui/Gistogram/: build.gradle
grafui/Gistogram/src/main/resources/: NativeLib.java
graph/core/define/: interface.h  template.h
graph/domain/algorithm/: Algorithm.h
graph/domain/model/: Graph.h  UndirectedGraph.h
graph/domain/model/edge/: EProperty.h  Edge.h
graph/domain/model/vertex/: VProperty.h  Vertex.h
graph/presentation/logistic/: logistic.h
graph/presentation/logistic/data/: City.h  Road.h
graph/presentation/logistic/usecase/: BuildLogisticGraphFromFileUseCase.h  BuildLogisticUndirectedGraphFromFileUseCase.h  GenerateLogisticGraphUseCase.h  GenerateLogisticUndirectedGraphUseCase.h
graph/tool/graph/: ShortestTimeWayAlgorithm.h  ShortestVertexWayAlgorithm.h
graph/tool/unorderedgraph/: UndirectedShortestTimeWayAlgorithm.h  UndirectedShortestVertexWayAlgorithm.h
hashmap/Gistogram/: result_data.txt
hashmap/Gistogram/src/main/resources/: application.yml
java/Sorts/: build.gradle  data.json  data.txt  data_10.txt  data_100.txt  data_1000.txt  data_10000.txt
java/Sorts/gradle/wrapper/: gradle-wrapper.properties
jni/: GistogramJNI.cpp  GistogramJNI.h  HashMapJNI.cpp  HashMapJNI.h  SorterServiceJNI.cpp  SorterServiceJNI.h  nativelib.cpp
pointer/: ShrdPtr.h  SmrtPtr.h  UnqPtr.h  WeakPtr.h
sort/: BaseSorter.h  ISorter.h  SorterFactory.h  SorterService.h  SorterServiceArray.h  SorterServiceArrayAdapter.h  SorterServiceDynamicArray.h  SorterServiceList.h
sort/impl/: BubbleSorter.h  HeapSorter.h  InsertionSorter.h  MergeSorter.h  QuickSorter.h
test/: TestCase.h  TestMutableListSequence.cpp  TestMutableListSequence.h  loadTestSeq.cpp  loadTestSeq.h
test/array/: DynamicArrayTests.cpp  DynamicArrayTests.h
test/dict/: DictionaryTest.cpp  DictionaryTest.h  DictionaryTests.cpp  DictionaryTests.h
test/gistogram/: GistogramTests.cpp  GistogramTests.h
test/graph/: graphTests.h  undirectedGraphTest.h
test/hashmap/: HashMapTest.cpp  HashMapTest.h  HashMapTests.cpp  HashMapTests.h
test/helper/: TestDataManager.cpp  TestDataManager.h  TestDataManagerArray.cpp  TestDataManagerArray.h  TestDataManagerList.cpp  TestDataManagerList.h  TestHelpers.cpp  TestHelpers.h
test/loadSeq/: loadTestSeq.cpp  loadTestSeq.h
test/loadTestResults/: load_test_results.csv  load_test_seq_results.csv
test/loadTests/: loadTests.cpp  loadTests.h
test/mutableArraySeq/: MutableArraySequenceUnqPtrTests.cpp  MutableArraySequenceUnqPtrTests.h
test/mutableListSeq/: MutableListSequenceUnqPtrTests.cpp  MutableListSequenceUnqPtrTests.h  TestMutableListSequence.cpp  TestMutableListSequence.h
test/pointerTests/: shrdPtrTests.cpp  shrdPtrTests.h  smrtPtrTests.cpp  smrtPtrTests.h  unqPtrTests.cpp  unqPtrTests.h
test/pointerTests/shrd/: ShrdPtrLoadTest.cpp  ShrdPtrLoadTest.h  ShrdPtrTests.cpp  ShrdPtrTests.h  shrdPtrTestsAB.cpp  shrdPtrTestsAB.h
test/pointerTests/smrt/: SmrtPtrLoadTest.cpp  SmrtPtrLoadTest.h  SmrtPtrTests.cpp  SmrtPtrTests.h  smrtPtrTestsAB.cpp  smrtPtrTestsAB.h
test/pointerTests/unq/: UnqPtrLoadTest.cpp  UnqPtrLoadTest.h  UnqPtrTests.cpp  UnqPtrTests.h  unqPtrTestsAB.cpp  unqPtrTestsAB.h
test/pointerTests/weak/: WeakPtrLoadTest.cpp  WeakPtrLoadTest.h  WeakPtrTests.cpp  WeakPtrTests.h
test/result/: data.json  data.txt
test/sorts/: DataTestSuite.cpp  DataTestSuiteArray.cpp  DataTestSuiteArray.h  DataTestSuiteList.cpp  DataTestSuiteList.h  InteractiveTestSuite.cpp  InteractiveTestSuite.h  InteractiveTestSuiteArray.cpp  InteractiveTestSuiteArray.h  InteractiveTestSuiteList.cpp  InteractiveTestSuiteList.h
test/testClasses/: A.h  B.h  Person.h
ui/: ui.cpp  ui.h
util/: Definition.h  random.cpp  random.h  tupleUtil.h
(+20 files in other folders)
